--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -140,6 +140,51 @@ button, a {
   font-size: .8rem;
 }
 
+.btn.btn-hamburger {
+  position: relative;
+  width: 2rem;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+}
+
+.btn.btn-hamburger span {
+  background-color: #504f5b;
+  height: 3px;
+  position: absolute;
+  top: .5rem;
+  left: 0;
+  width: 100%;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.btn.btn-hamburger span:first-child {
+  top: 1rem;
+}
+
+.btn.btn-hamburger span:last-child {
+  top: 1.5rem;
+}
+
+.btn.btn-hamburger.open span {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  top: 1rem;
+  background-color: #5ae4a8;
+}
+
+.btn.btn-hamburger.open span:first-child {
+  -webkit-transform: none;
+          transform: none;
+  opacity: 0;
+}
+
+.btn.btn-hamburger.open span:last-child {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
 main {
   padding: 2rem;
   margin-top: 4rem;
