--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -146,6 +146,49 @@ button, a {
     color: $color-gray;
     font-size: .8rem;
   }
+
+  &.btn-hamburger {
+    position: relative;
+    width: 2rem;
+    background-color: transparent;
+    border: 0;
+    margin: 0;
+
+    span {
+      background-color: $color-dark;
+      height: 3px;
+      position: absolute;
+      top: .5rem;
+      left: 0;
+      width: 100%;
+      transition: .3s;
+
+      &:first-child {
+        top: 1rem;
+      }
+
+      &:last-child {
+        top: 1.5rem;
+      }
+    }
+
+    &.open {
+      span {
+        transform: rotate(45deg);
+        top: 1rem;
+        background-color: $color-primary;
+  
+        &:first-child {
+          transform: none;
+          opacity: 0;
+        }
+  
+        &:last-child {
+          transform: rotate(-45deg);
+        }
+      }
+    }
+  }
 }
 
 main {
